fix npm package location

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -46,7 +46,7 @@
 
 <p>This will install x-optimizely-cli on your system and give you access to the <code>xoptcli</code> executable globally.</p>
 
-<pre><code>npm install -g x-optimizely-cli
+<pre><code>npm i -g @teamroboboogie/x-optimizely-cli
 </code></pre>
 
 <h4 id="settingupyourtestingdirectory">Setting up your testing directory:</h4>
