fix holdback bug, link to updated homepage, readme tweak

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -321,7 +321,7 @@ stylesheet.href = '//localhost:8080/variation.css';
 document.head.appendChild(stylesheet);
 </code></pre>
 
-<p>Copyright and license
-Code copyright 2018 roboboogie. Released under the Apache 2.0 License.</p>
+<h4>Copyright and license</h4>
+<p>Code copyright 2018 roboboogie. Released under the Apache 2.0 License.</p>
   </body>
 </html>
